assets/css/input.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* --- Local Fonts --- */

/* LATO */
@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 300;
  font-display: swap;
  src: url('../fonts/lato-v25-latin-300.woff2') format('woff2');
}

@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url('../fonts/lato-v25-latin-regular.woff2') format('woff2');
}

@font-face {
  font-family: 'Lato';
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: url('../fonts/lato-v25-latin-700.woff2') format('woff2');
}

/* --- PhotoSwipe --- */

/* Fix background not covering full viewport on mobile (safe area / browser chrome) */
.pswp {
  height: 100dvh;
}

/* Show navigation arrows on touch screens */
.pswp--touch .pswp__button--arrow {
  visibility: visible;
}

/* PLAYFAIR DISPLAY */
@font-face {
  font-family: 'Playfair Display';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url('../fonts/playfair-display-v40-latin-regular.woff2') format('woff2');
}

@font-face {
  font-family: 'Playfair Display';
  font-style: italic;
  font-weight: 400;
  font-display: swap;
  src: url('../fonts/playfair-display-v40-latin-italic.woff2') format('woff2');
}

@font-face {
  font-family: 'Playfair Display';
  font-style: normal;
  font-weight: 600;
  font-display: swap;
  src: url('../fonts/playfair-display-v40-latin-600.woff2') format('woff2');
}

